fix: home, register ok for mobile first tested on iphone 12 pro and above resolutions

--- a/src/containers/Login/login.scss
+++ b/src/containers/Login/login.scss
@@ -1,9 +1,21 @@
-.login{
-    background-color: lightskyblue;
-    height: 40em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-width: 320px;
+.login {
+	width: 100vw;
+	height: 87vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: linear-gradient(130deg, rgb(196, 182, 184), rgb(233, 174, 183), rgb(196, 182, 184));
+}
+input {
+	width: 20em;
+	height: 2em;
+	border-style: none;
+	margin-top: 2em;
+	margin-bottom: .2em;
+	border-radius: .5em;
+	text-align: center;	
+}
+
+::placeholder{
+	text-align: center;
 }
