--- a/src/containers/Register/Register.scss
+++ b/src/containers/Register/Register.scss
@@ -5,16 +5,16 @@
 	align-items: center;
 	justify-content: center;
 	background: linear-gradient(130deg, rgb(196, 182, 184), rgb(233, 174, 183), rgb(196, 182, 184));
-
 }
 
 input {
 	width: 20em;
-	height: 2.5em;
+	height: 2em;
 	border-style: none;
-	margin-top: 3em;
+	margin-top: 2em;
 	margin-bottom: .2em;
 	border-radius: .5em;
+	text-align: center;	
 }
 
 ::placeholder{
@@ -23,7 +23,7 @@ input {
 
 
 input:hover {
-	background: linear-gradient(130deg, rgb(212, 205, 206), rgb(133, 128, 129), rgb(231, 226, 229));
+	background: linear-gradient(130deg, rgb(212, 205, 206), rgb(199, 173, 178), rgb(231, 226, 229));	
 }
 
 .error {
@@ -37,18 +37,18 @@ input:hover {
 
 .form,
 .h3 {
-	height: 51em;
-	width: 25em;
+	height: 45em;
+	width: 23em;
 	padding: 2em;
 	border-radius: 1.5em;
 	background: linear-gradient(130deg, rgb(255, 192, 203), rgb(255, 182, 193), rgb(255, 105, 180));
-	box-shadow: 0px 0px 5px 5px;
+	box-shadow: 8px 0px 5px 5px;
 }
 
 .submit {
 	margin-top: 2em;
 	width: 100%;
-	height: 3em;
+	height: 2.5em;
 	border-radius: 1em;
 	background: linear-gradient(130deg, rgb(15, 43, 4), rgb(159, 235, 114), rgb(11, 24, 3));
 }
